# corrator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.org  corrator.toml  devenv.nix  flake.nix  justfile  tmp.toml
.github/: FUNDING.yml
.github/workflows/: changelog.yml  release.yml
examples/: applications.toml  config.json  containers.toml
src/: application.rs  config.schema.json  container.rs  docker.rs  end_of_life.rs  lib.rs  main.rs  tui.rs
src/end_of_life/: cache.rs
