[package]
name = "corrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
confy = "0.5.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_regex = "1.1.0"
shellexpand = "3.0.0"
toml = "0.7.2"
