[package]
name = "corrator"
version = "0.1.11"
edition = "2021"
description = "A tool to verify the versions of apps used inside docker containers."
license-file = "LICENSE"
homepage = "https://github.com/natecox/corrator"
repository = "https://github.com/natecox/corrator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsaidb = { version = "0.4.1", features = ["local"] }
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.96"
serde_regex = "1.1.0"
shellexpand = "3.0.0"
toml = "0.7.2"
xdg = "2.4.1"
